расчет коинтеграции